[workspace]
members = [
    "bundler",
    "cli",
    "luacmd",
    "luacmds",
]
default-members = ["cli"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
walkdir = "2.5"
zstd = { version = "0.13", default-features = false }

[profile.dev]
codegen-units = 1024

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "debuginfo"
