[workspace]
members = [
    "bundler",
    "cli",
    "lua-rt",
]
default-members = ["cli"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
tempfile = "3.20"
walkdir = "2.5"
zstd = { version = "0.13", default-features = false }

[profile.dev]
codegen-units = 1024
build-override.debug = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "debuginfo"
