[package]
name = "lunest"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", default-features = false, features = ["windows"] }
env_logger = "0.11"
globset = { version = "0.4", default-features = false, features = ["serde1"] }
indexmap = "2.7"
log = "0.4"
lua-rt = { path = "../lua-rt" }
merge = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.7"
tempfile.workspace = true
thiserror = "2.0"
toml = { version = "0.8", default-features = false, features = ["parse"] }
walkdir.workspace = true
which = "7.0"

[dependencies.tokio]
version = "1.43"
features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
]

[dev-dependencies]
rstest = { version = "0.24", default-features = false }

[build-dependencies]
bundler = { path = "../bundler", features = ["build-script"] }
