[package]
name = "lua_cmd"
version.workspace = true
edition.workspace = true

[dependencies]
mlua = { version = "0.10", default-features = false, features = ["vendored"] }

[features]
default = ["lua54"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
