[package]
name = "lunest_lib"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lunest_shared = { workspace = true }
lunest_macros = { workspace = true }
anyhow = { workspace = true }
mlua = { workspace = true, features = ["module"] }
clap = { workspace = true }
globwalk = "0.9.1"
indexmap = "2.2.1"
scopeguard = { version = "1.2.0", optional = true }  # used in `lunest_macros` crate
project-root = { workspace = true, optional = true }

[features]
default = ["test", "lua54"]
test = ["lunest_macros/test", "dep:scopeguard", "dep:project-root", "mlua/macros"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
