[package]
name = "lunest_lib"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lunest_shared = { workspace = true, features = ["utils", "cli", "config"] }
lunest_macros = { workspace = true }
anyhow = { workspace = true }
mlua = { workspace = true, features = ["module"] }
globwalk = "0.9.1"
indexmap = "2.2.5"
scopeguard = { version = "1.2.0", optional = true }  # used in `lunest_macros` crate
project-root = { workspace = true, optional = true }
regex = "1.10.3"
once_cell = "1.19.0"

[features]
default = ["test", "lua54"]
test = ["lunest_macros/test", "dep:scopeguard", "dep:project-root", "mlua/macros"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
