[package]
name = "lua_rt"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
mlua = { workspace = true, features = ["vendored"] }

[features]
default = []
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
