[package]
name = "macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.35", optional = true }
proc-macro2 = { version = "1.0.78", optional = true }
syn = { version = "2.0.48", features = ["full"], optional = true }

[features]
test = [
  "dep:quote",
  "dep:proc-macro2",
  "dep:syn",
  "syn/extra-traits",
]
