[package]
name = "lunest_macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
lunest_shared.workspace = true
quote = "1.0.36"
proc-macro2 = { version = "1.0.81", optional = true }
syn = { version = "2.0.60", features = ["full"], optional = true }

[features]
test = [
  "dep:proc-macro2",
  "dep:syn",
  "syn/extra-traits",
]
