[package]
name = "lunest_shared"
version.workspace = true
edition.workspace = true

[dependencies]
project-root.workspace = true
anyhow.workspace = true
clap.workspace = true
serde = { version = "1.0.196", features = ["derive"] }
toml = { version = "0.8.10", default-features = false, features = ["parse"] }
