[package]
name = "lunest_shared"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
project-root = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }

[dependencies.toml]
version = "0.8.10"
default-features = false
features = ["parse"]
optional = true

[features]
config = ["dep:serde", "dep:toml"]
cli = ["dep:clap"]
utils = ["dep:project-root"]
