[package]
name = "xtask"
version.workspace = true
edition.workspace = true
default-run = "xtask"

[dependencies]
macros.workspace = true
shared.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json = "1.0"

[features]
default = ["lua54"]
lua51 = []
lua52 = []
lua53 = []
lua54 = []
luajit = []
luajit52 = []
