[package]
name = "xtask"
version.workspace = true
edition.workspace = true
default-run = "xtask"

[dependencies]
lunest_shared = { workspace = true, features = ["utils"] }
anyhow.workspace = true
clap.workspace = true
project-root.workspace = true
serde_json = "1.0"

[[bin]]
name = "xtask"
path = "src/main.rs"
